--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   </header>
 
   <section id="bio">
-    <h2>Hello, I'm Nandha Shriram</h2>
+    <h2>Hello, I'm Nandha Shriram Sabbina</h2>
     <p>I am a detail-oriented Data Analyst with a strong background in statistics, business intelligence, and machine learning. With experience in tools such as Python, SQL, Power BI, and Tableau, I thrive in turning raw data into clear, actionable insights. My academic journey has given me a solid understanding of data-driven decision-making and analytical storytelling.</p>
   </section>
 
@@ -34,7 +34,7 @@
 
   <footer>
     <p>Contact: nandha.email@example.com | <a href="https://www.linkedin.com/in/nandhashriram/" target="_blank">LinkedIn</a></p>
-    <p>&copy; 2025 Nandha Shriram</p>
+    <p>&copy; 2025 Nandha Shriram Sabbina</p>
   </footer>
 </body>
 </html>
