--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nandha Shriram | Data Analyst Portfolio</title>
+  <title>Nandha Shriram Sabbina | Data Analyst Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -39,7 +39,7 @@
 
   <footer>
     <p>Contact: nandha.email@example.com | <a href="https://www.linkedin.com/in/nandhashriram/" target="_blank">LinkedIn</a> | <a href="https://github.com/yourusername" target="_blank">GitHub</a></p>
-    <p>&copy; 2025 Nandha Shriram</p>
+    <p>&copy; 2025 Nandha Shriram Sabbina</p>
   </footer>
 </body>
 </html>
