--- a/about.html
+++ b/about.html
@@ -3,38 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Nandha Shriram</title>
+  <title>About Me | Data Analyst Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="about">
+
   <header>
-    <h1>About Me</h1>
     <nav>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="projects.html">Projects</a> |
-      <a href="contact.html">Contact</a>
+      <div class="logo">Nandha Shriram | Data Analyst</div>
+      <ul class="nav-links">
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="about.html#about">About Me</a></li>
+        <li><a href="projects.html#projects">Projects</a></li>
+        <li><a href="contact.html#contact">Contact</a></li>
+      </ul>
+      <button id="theme-toggle" class="theme-btn">🌞</button>
     </nav>
   </header>
 
-  <section id="bio">
-    <h2>Hello, I'm Nandha Shriram Sabbina</h2>
-    <p>I am a detail-oriented Data Analyst with a strong background in statistics, business intelligence, and machine learning. With experience in tools such as Python, SQL, Power BI, and Tableau, I thrive in turning raw data into clear, actionable insights. My academic journey has given me a solid understanding of data-driven decision-making and analytical storytelling.</p>
-  </section>
-
-  <section id="skills">
-    <h2>Skills & Tools</h2>
-    <ul>
-      <li><strong>Languages:</strong> Python, SQL, R</li>
-      <li><strong>Analytics:</strong> Excel, Power BI, Tableau</li>
-      <li><strong>Data:</strong> Pandas, NumPy, MySQL, PostgreSQL</li>
-      <li><strong>Others:</strong> Git, Jupyter, Google Data Studio</li>
-    </ul>
+  <section class="about" id="about">
+    <h1>About Me</h1>
+    <p>Data Analyst with two years of experience in healthcare analytics, data visualization, and predictive modeling. Expertise
+        in SQL, Python, Power BI, and statistical analysis. Proven ability to streamline data operations, automate reporting, and
+        drive data-driven decision-making. </p>
+    <p>My mission is to transform raw data into clear actionable strategies that drive success.</p>
   </section>
 
   <footer>
-    <p>Contact: nandha.email@example.com | <a href="https://www.linkedin.com/in/nandhashriram/" target="_blank">LinkedIn</a></p>
-    <p>&copy; 2025 Nandha Shriram Sabbina</p>
+    <p>© 2025 Nandha Shriram Sabbina. All Rights Reserved.</p>
   </footer>
+
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
