--- a/contact.html
+++ b/contact.html
@@ -3,27 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact | Nandha Shriram</title>
+  <title>Contact | Data Analyst Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="contact">
+
   <header>
-    <h1>Contact Me</h1>
     <nav>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="projects.html">Projects</a> |
-      <a href="contact.html">Contact</a>
+      <div class="logo">Nandha Shriram | Data Analyst</div>
+      <ul class="nav-links">
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="about.html#about">About Me</a></li>
+        <li><a href="projects.html#projects">Projects</a></li>
+        <li><a href="contact.html#contact">Contact</a></li>
+      </ul>
+      <button id="theme-toggle" class="theme-btn">🌞</button>
     </nav>
   </header>
-  <section id="contact">
-    <h2>Get in Touch</h2>
-    <p>Email: nandha.email@example.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/nandhashriram/" target="_blank">linkedin.com/in/nandhashriram</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+
+  <section class="contact" id="contact">
+    <h1>Contact Me</h1>
+    <p>Email: <a href="mailto:nandhashriramsabbina.da@gmail.com">nandhashriramsabbina.da@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/nandha-shriram-sabbina-472834186/" target="_blank">linkedin.com/in/nandha</a></p>
+    <p>GitHub: <a href="https://github.com/nandha7022" target="_blank">github.com/nandha</a></p>
   </section>
+
   <footer>
-    <p>&copy; 2025 Nandha Shriram</p>
+    <p>© 2025 Nandha Shriram Sabbina. All Rights Reserved.</p>
   </footer>
+
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
