--- a/index.html
+++ b/index.html
@@ -3,43 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nandha Shriram Sabbina | Data Analyst Portfolio</title>
+  <title>Data Analyst Portfolio | Home</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 </head>
-<body>
+<body id="home">
+
+  <!-- Preloader -->
+  <div id="preloader">
+    <div class="loader"></div>
+  </div>
+
   <header>
-    <h1>Nandha Shriram</h1>
-    <p>Data Analyst | SQL • Python • Tableau</p>
     <nav>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="projects.html">Projects</a> |
-      <a href="contact.html">Contact</a>
+      <div class="logo">Nandha Shriram | Data Analyst</div>
+      <ul class="nav-links">
+        <li><a href="index.html#home">Home</a></li>
+        <li><a href="about.html#about">About Me</a></li>
+        <li><a href="projects.html#projects">Projects</a></li>
+        <li><a href="contact.html#contact">Contact</a></li>
+      </ul>
+      <button id="theme-toggle" class="theme-btn">🌞</button>
     </nav>
   </header>
 
-  <section id="welcome">
-    <h2>Welcome</h2>
-    <p>Hello! I'm a passionate Data Analyst skilled in SQL, Python, Excel, and Business Intelligence tools. I enjoy transforming data into actionable insights and visual stories.</p>
-  </section>
+  <!-- Particle background -->
+  <div id="particles-js"></div>
 
-  <section id="projects">
-    <h2>Featured Projects</h2>
-    <div class="project">
-      <h3>Retail Sales Dashboard</h3>
-      <p>Created a dynamic dashboard in Power BI to analyze sales data across regions and time.</p>
-      <a href="https://github.com/yourusername/retail-sales-dashboard" target="_blank">View on GitHub</a>
-    </div>
-    <div class="project">
-      <h3>Customer Churn Analysis</h3>
-      <p>Used logistic regression and decision trees in Python to predict customer churn.</p>
-      <a href="https://github.com/yourusername/churn-analysis" target="_blank">View on GitHub</a>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Hi, I'm Nandha Shriram Sabbina</h1>
+    <p><span id="typed"></span></p>
+    <a href="projects.html#projects" class="btn">View My Work</a>
+    <a href="assets/resume.pdf" class="btn" download>Download Resume</a>
+
+    <div class="scroll-down">
+      <a href="about.html#about"><span></span></a>
     </div>
   </section>
 
   <footer>
-    <p>Contact: nandha.email@example.com | <a href="https://www.linkedin.com/in/nandhashriram/" target="_blank">LinkedIn</a> | <a href="https://github.com/yourusername" target="_blank">GitHub</a></p>
-    <p>&copy; 2025 Nandha Shriram Sabbina</p>
+    <p>© 2025 Nandha Shriram Sabbina. All Rights Reserved.</p>
   </footer>
+
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
