--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
     <!-- Social Media Icons -->
     <div class="social-icons">
-      <a href="https://linkedin.com/in/yourlinkedin" target="_blank">
+      <a href="https://www.linkedin.com/in/nandha-shriram-sabbina-472834186/" target="_blank">
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
       </a>
-      <a href="https://github.com/yourgithub" target="_blank">
+      <a href="https://github.com/nandha7022" target="_blank">
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
       </a>
-      <a href="mailto:youremail@example.com" target="_blank">
+      <a href="mailto:nandhashriramsabbina.da@gmail.com" target="_blank">
         <img class="email-icon" src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/gmail.svg" alt="Email">
       </a>
     </div>    
@@ -67,22 +67,32 @@
 
   <!-- Projects Section -->
   <section class="projects" id="projects">
-    <h1>My Projects</h1>
-    <div class="project-list">
-      <div class="project-item">
-        <h2>Sales Dashboard</h2>
-        <p>Interactive Tableau dashboard showcasing retail sales KPIs and trends.</p>
+    <h1 class="section-title">Featured Projects</h1>
+  
+    <div class="project-container">
+  
+      <!-- Project 1 -->
+      <div class="project-card">
+        <div class="project-info">
+          <h2>KnowFlow Chatbot</h2>
+          <div class="project-icons">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+          </div>
+          <p>Developed an AI-powered chatbot using Hybrid Search (BM25 + FAISS) and Agentic RAG for context-aware knowledge retrieval and personalized employee training.</p>
+          <a href="https://github.com/yourgithub/knowflow-chatbot" class="project-button" target="_blank">Check it out!</a>
+        </div>
+      
+        <div class="project-image">
+          <img src="assets/images/knowflow.png" alt="KnowFlow Screenshot">
+        </div>
       </div>
-      <div class="project-item">
-        <h2>Churn Prediction</h2>
-        <p>Python-based machine learning model predicting telecom customer churn with 85% accuracy.</p>
-      </div>
-      <div class="project-item">
-        <h2>Healthcare Claims Analysis</h2>
-        <p>SQL data analysis identifying fraud and anomalies in healthcare claims data.</p>
-      </div>
+  
+      <!-- (Add more projects in similar format) -->
+  
     </div>
   </section>
+  
 
   <!-- Footer -->
   <footer>
